# Elysium

./: .gitignore  .gitmodules  CMakeLists.txt  premake5.lua
engine/: CMakeLists.txt  premake5.lua
engine/src/: engine.h
engine/src/core/: application.cpp  application.h  input.h  keycodes.h  layer.h  layerstack.cpp  layerstack.h  log.cpp  log.h  mousecodes.h  timestep.h  utility.h  window.cpp  window.h
engine/src/event/: applicationevent.h  event.h  keyevent.h  mouseevent.h
engine/src/imgui/: imguilayer.cpp  imguilayer.h
engine/src/platform/opengl/: openglbuffer.cpp  openglbuffer.h  openglcontext.cpp  openglcontext.h  openglframebuffer.cpp  openglframebuffer.h  openglrendererapi.cpp  openglrendererapi.h  openglshader.cpp  openglshader.h  opengltexture.cpp  opengltexture.h  openglvertexarray.cpp  openglvertexarray.h
engine/src/platform/windows/: windowsinput.cpp  windowswindow.cpp  windowswindow.h
engine/src/platform/x11/: x11input.cpp  x11window.cpp  x11window.h
engine/src/renderer/: buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h  graphicscontext.cpp  graphicscontext.h  rendercommand.cpp  rendercommand.h  renderer.cpp  renderer.h  rendererapi.cpp  rendererapi.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h
engine/src/scene/: assimploader.cpp  assimploader.h  camera.cpp  camera.h  components.h  entity.cpp  entity.h  scene.cpp  scene.h  scriptableentity.h
sandbox/: CMakeLists.txt  premake5.lua
sandbox/resources/models/casual_male_char__rigged/: license.txt  scene.gltf
sandbox/resources/shaders/: renderer.glsl  skybox.glsl
sandbox/src/: cameraellipticalmotion.h  camerascript.h  editorlayer.h  ellipticalmotion.h  sandboxapplication.cpp  sandboxlayer.h  scenehierarchicalpanel.h  scenelayer.h  translation.h  wasdcontroller.h
scripts/: Gen-Win.bat
